--- a/app/templates/admin/adminManageCourse.html
+++ b/app/templates/admin/adminManageCourse.html
@@ -202,7 +202,7 @@
                     <td>{{ row.practicalLecturer.userName }}</td>
                     <td>{{ row.tutorialLecturer.userName }}</td>
                     <td>{{ row.courseStudent }}</td>
-                    <td>{{ [row.courseExamId] }} {{ row.courseExamStatus }}</td>
+                    <td>{{ [row.courseExamStatus] }} {{ row.courseExamId }}</td>
                 </tr>
                 {% endfor %}
             </tbody>
