--- a/app/templates/admin/adminManageCourse.html
+++ b/app/templates/admin/adminManageCourse.html
@@ -187,7 +187,7 @@
                     <th>Practical Lecturer</th>
                     <th>Tutorial Lecturer</th>
                     <th>No. of Students</th>
-                    <th>Exam Status with Id</th>
+                    <th>Exam Status with Exam Id</th>
                 </tr>
             </thead>
             <tbody>
