--- a/app/templates/admin/adminManageExam.html
+++ b/app/templates/admin/adminManageExam.html
@@ -147,6 +147,9 @@
                             </option>
                         {% endfor %}
                     </select>
+
+                    <label>No. of Invigilator Need</label>
+                    <input type="number" id="invigilatorNo" name="invigilatorNo" value="{{ invigilatorNo_text }}" required><br>
                 </div>
             </div>
 
