--- a/app/templates/admin/adminManageExam.html
+++ b/app/templates/admin/adminManageExam.html
@@ -128,10 +128,10 @@
                     </select><br>
 
                     <label>Course Practical Lecturer</label>
-                    <input type="text" id="practicalLecturer" name="practicalLecturer" value="{{ practicalLecturer_text }}" readonly required><br>
+                    <input type="text" id="practicalLecturer" name="practicalLecturer" value="{{ practicalLecturer_text }}" readonly><br>
 
                     <label>Course Tutorial Lecturer</label>
-                    <input type="text" id="tutorialLecturer" name="tutorialLecturer" value="{{ tutorialLecturer_text }}" readonly required>
+                    <input type="text" id="tutorialLecturer" name="tutorialLecturer" value="{{ tutorialLecturer_text }}" readonly>
                 </div> 
 
                 <div class="form-right">
