--- a/app/templates/admin/adminManageDepartment.html
+++ b/app/templates/admin/adminManageDepartment.html
@@ -119,6 +119,10 @@
                     <th>No</th>
                     <th>Department Code</th>
                     <th>Department Name</th>
+                    <th>Dean Name</th>
+                    <th>Dean Email</th>
+                    <th>Hop Name</th>
+                    <th>Hop Email</th>
                 </tr>
             </thead>
             <tbody>
@@ -127,6 +131,10 @@
                     <td>{{ loop.index }}</td> <!-- Display index starting from 1 -->
                     <td>{{ row.departmentCode }}</td>
                     <td>{{ row.departmentName }}</td>
+                    <td>{{ row.dean.userId if row.dean else '' }}</td>
+                    <td>{{ row.dean.userEmail if row.dean else '' }}</td>
+                    <td>{{ row.hop.userId if row.hop else '' }}</td>
+                    <td>{{ row.hop.userEmail if row.hop else '' }}</td>
                 </tr>
                 {% endfor %}
             </tbody>
