--- a/app/templates/admin/adminManageExam.html
+++ b/app/templates/admin/adminManageExam.html
@@ -218,7 +218,7 @@
                     <td>{{ row.examStartTime }} - {{ row.examEndTime }}</td>                    
                     <td>{{ row.examVenue }}</td>
                     <td>{{ row.course.courseCode }}</td>
-                    <td>{{ row.examCourseCodeSection }}</td>
+                    <td>{{ row.course.CourseCodeSection }}</td>
                     <td>{{ row.course.practicalLecturer.userName }}</td>
                     <td>{{ row.course.tutorialLecturer.userName }}</td>
                     <td>{{ row.course.courseStudent }}</td>
