--- a/app/templates/admin/adminManageExam.html
+++ b/app/templates/admin/adminManageExam.html
@@ -91,18 +91,16 @@
             <h4 style="text-align: center;">Manual Data Entry Section</h4>
             <div class="profile-frame">
                 <div class="form-left">
-                    <label>Exam Date and Day</label>
-                    <div style="display: flex; gap: 2%">
-                        <input type="date" name="examDate" id="examDate" value="{{ examDate_text }}" required>
-                        <span>&</span>
-                        <input type="text" name="examDay" id="examDay" value="{{ examDay_text }}" readonly>
+                    <label>Exam Start</label>
+                    <div style="display: flex; gap: 2%;">
+                        <input type="date" id="startDate" name="startDate" required>
+                        <input type="time" id="startTime" name="startTime" required>
                     </div><br>
 
-                    <label>Start Time and End Time</label>
+                    <label>Exam End</label>
                     <div style="display: flex; gap: 2%;">
-                        <input type="time" id="startTime" name="startTime" value="{{ startTime_text }}" min="08:00" max="20:00" required>
-                        <span>to</span>
-                        <input type="time" id="endTime" name="endTime" value="{{ endTime_text }}" min="08:00" max="20:00" required>
+                        <input type="date" id="endDate" name="endDate" required>
+                        <input type="time" id="endTime" name="endTime" required>
                     </div><br>
 
                     <label>Program Code</label>
