--- a/app/templates/admin/adminManageInvigilationReport.html
+++ b/app/templates/admin/adminManageInvigilationReport.html
@@ -32,7 +32,7 @@
                     <td>{{ att.invigilator.userName }}</td>
                     <td>{{ att.invigilator.userDepartment }}</td>
                     <td>{{ att.invigilator.userContact }}</td>
-                    <td>{{ att.report.exam.examId }}</td>
+                    <td>[{{ att.report.exam.examId }}]</td>
                     <td>{{ att.report.exam.examCourseCodeSection }}</td>
                     <td>{{ att.report.exam.examStartTime }} - {{ att.report.exam.examEndTime }}</td>
                     <td>{{ att.report.exam.examNoInvigilator }}</td>
