--- a/app/templates/admin/adminManageExam.html
+++ b/app/templates/admin/adminManageExam.html
@@ -215,11 +215,13 @@
                     <td>{{ row.examDate }} [{{ row.examDay }}]</td>
                     <td>{{ row.examStartTime }} - {{ row.examEndTime }}</td>                    
                     <td>{{ row.examVenue }}</td>
-                    <td>{{ row.courses.courseCode }}</td>
-                    <td>{{ row.courses.courseCodeSection }}</td>
-                    <td>{{ row.courses.practicalLecturer.userName }}</td>
-                    <td>{{ row.courses.tutorialLecturer.userName }}</td>
-                    <td>{{ row.courses.courseStudent }}</td>
+                    {% for course in course_data %}
+                        <td>{{ row.course.courseCode }}</td>
+                        <td>{{ row.course.courseCodeSection }}</td>
+                        <td>{{ row.course.practicalLecturer.userName }}</td>
+                        <td>{{ row.course.tutorialLecturer.userName }}</td>
+                        <td>{{ row.course.courseStudent }}</td>
+                    {% endfor %}
                     <td>{{ row.examNoInvigilator }}</td>
                 </tr>
                 {% endfor %}
