--- a/app/templates/admin/adminManageExam.html
+++ b/app/templates/admin/adminManageExam.html
@@ -216,11 +216,11 @@
                     <td>{{ row.examStartTime }} - {{ row.examEndTime }}</td>                    
                     <td>{{ row.examVenue }}</td>
                     {% for course in course_data %}
-                        <td>{{ row.course.courseCode }}</td>
-                        <td>{{ row.course.courseCodeSection }}</td>
-                        <td>{{ row.course.practicalLecturer.userName }}</td>
-                        <td>{{ row.course.tutorialLecturer.userName }}</td>
-                        <td>{{ row.course.courseStudent }}</td>
+                        <td>{{ course.courseCode }}</td>
+                        <td>{{ course.courseCodeSection }}</td>
+                        <td>{{ course.practicalLecturer.userName }}</td>
+                        <td>{{ course.tutorialLecturer.userName }}</td>
+                        <td>{{ course.courseStudent }}</td>
                     {% endfor %}
                     <td>{{ row.examNoInvigilator }}</td>
                 </tr>
